@@ -67,3 +67,5 @@
  * Simple shading on blocks so that they look more natural (like how MCEdit does it)
 
  * Pull the grass colorization color from a point on misc/grasscolor.png
+
+ * Make sure exception reporting stuff works okay on the new texfile stuff
