@@ -9,6 +9,9 @@
   * The "V" key will toggle Silverfish block highlighting on/off now.
     By default, silverfish blocks are highlighted in red.
   * Fixed an issue with grass colorization on some texturepacks
+  * The "U" key will now toggle the rendering of chunk borders
+  * Block and chunk information in the positioning popup are now
+    slightly more accurate.
 
 Minecraft X-Ray 3.3.3 (2011.09.23)
 
